k8s-ultra-cheap/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carduitive
  labels:
    name: carduitive
