k8s-ultra-cheap/03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: carduitive3
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
