k8s-ultra-cheap/05-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: carduitive
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
