k8s-ultra-cheap/07-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: carduitive
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
